2011-08-23  Chris Sutcliffe  <ir0nh34d@users.sourceforge.net>

	Update & publish mingwrt.

	* mingw32/mingw32-runtime.xml: Update mingwrt to 3.20.
	* mingw32/issue.log: Updated accordingly.

2011-08-20  Chris Sutcliffe  <ir0nh34d@users.sourceforge.net>

	Update & publish mingwrt.

	* mingw32/mingw32-runtime.xml: Update mingwrt to 3.19.
	* mingw32/issue.log: Updated accordingly.

2011-08-05  Chris Sutcliffe  <ir0nh34d@users.sourceforge.net>

	Update & publish mingw32-binutils.

	* mingw32/mingw32-binutils.xml: Update to 2.21.53-1.
	* mingw32/issue.log: Updated accordingly.

2011-08-04  Chris Sutcliffe  <ir0nh34d@users.sourceforge.net>

	Update & publish mingw32-binutils.

	* mingw32/mingw32-binutils.xml: Update to 2.21.1-2.
	* mingw32/issue.log: Updated accordingly.

2011-08-04  Chris Sutcliffe  <ir0nh34d@users.sourceforge.net>

	Update & publish mingw32-gdb.

	* mingw32/mingw32-gdb.xml: Update to 7.3-2.
	* mingw32/issue.log: Updated accordingly.

2011-08-01  Chris Sutcliffe  <ir0nh34d@users.sourceforge.net>

	Update & publish mingw32-gdb.

	* mingw32/mingw32-gdb.xml: Update to 7.3-1.
	* mingw32/issue.log: Updated accordingly.

2011-07-31  Chris Sutcliffe  <ir0nh34d@users.sourceforge.net>

	Update & publish msys-mintty.

	* msys/msys-mintty.xml: Update to 1.0.1-1.
	* msys/issue.log: Updated accordingly.

2011-07-29  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Update for mingw-get-0.3-alpha-2.1 release.

	* mingw32/mingw32-mingw-get.xml: Add release entries.
	* mingw32/issue.log: Update accordingly.

2011-07-11  Charles Wilson  <mingw@cwilson.fastmail.fm>

	Update mingw32-pthreads; coordinate publication with gcc.
	* mingw32/mingw32-pthreads-w32.xml: Restructure & rename.
	Update to 2.9.0-pre snapshot from 20110507. New packages:
	mingw32-libpthreadgc, mingw32-libpthreadgce, mingw32-libquserex,
	and mingw32-libpthread-old (containing just libpthread-2.dll for
	backwards compatibility).
	* mingw32/issue.: Update accordingly.
