@@ -23,7 +23,7 @@
 # MinGW Project, accept liability for any damages, however caused,
 # arising from the use of this software.
 #
-  ce5435d81de37b3f0026eeadcfc184837b1ae8ec 2010090600 mingw-developer-toolkit.xml
+  71d9784c4b1d73fd13e665b8416d89dfa226720d 2011082600 mingw-developer-toolkit.xml
   dfd9cb4f354c07f66eba1de1453ec4eeb6171e50 2010092500 msys-autoconf.xml
   f8c23efaeaf06405cd535a6ae5959b0983516d00 2010090600 msys-autogen.xml
   acc3d8687855178ac17c98d655743ccf80a916ae 2010090600 msys-automake.xml
@@ -39,6 +39,7 @@
   818d3a20f85464f4641e7c4a1a9f92c0a190373b 2010090600 msys-cvs.xml
   eda455371db497bb83193712da725c6f2ec8524d 2010080900 msys-cygutils.xml
   20ea54bde4876deded24112b2b69bf4a56109efb 2010090600 msys-dash.xml
+  0ffa11b6a76d550813e38306592d7ddb6833788a 2011082600 msys-diffstat.xml
   c3c1de61dab88cf0d909a1a4a7d6a4e31a03d7d9 2010072800 msys-diffutils.xml
   caade7aec2195638c25c88566b9b38666963ac33 2010081000 msys-expat.xml
   200be8fa97e9d397e6d439b3b14fbb4622d55258 2010080900 msys-file.xml
@@ -53,6 +54,7 @@
   85165509f0dc3b7319e7fb24bbcaaf99437868f2 2010090600 msys-groff.xml
   2fcd6a4ee24dea76373c433bf60b829e07c2d265 2010090600 msys-guile.xml
   3de9e82f88247132a08b5a0173471f0654b710b6 2010072800 msys-gzip.xml
+  72961ec83f17f48a5a7365749314de00e4617e28 2011082600 msys-help2man.xml
   475e04ecb555319cdf316af52b1941e54e86d70d 2010090600 msys-inetutils.xml
   4abbf2f7c0420e8d3ea103f2702e9a1ce9716d76 2010080500 msys-less.xml
   56e6c0366c46c0dda4d522875110cc57adc35bfa 2010090600 msys-libarchive.xml
@@ -69,12 +71,13 @@
   67d785915f786d195fd2fab5a0b59fad0337b6c5 2010090500 msys-mktemp.xml
   3bd4da5adb392657a7f4e28715c30aee87c6e5a9 2010090600 msys-openssh.xml
   2902a92042e440f0b0f46ef8fdb3c0c17af48d63 2010090600 msys-openssl.xml
-  113afbae95941e2882995eb70f89270a6ca0fc0c 2010100700 msys-package-list.xml
+  3b32fd408512138a48e3c2e18de8ef8c153dd97d 2011082600 msys-package-list.xml
   791f69a07674cad4e57c562e583432b48a7bc8d4 2010081000 msys-patch.xml
   52ce9085a89646d5830394b29f3352baa3f88b45 2011042700 msys-perl.xml
   29c5202d3f4ef244fad94b3d4b34673612df38cd 2010080900 msys-popt.xml
   25fa44b9bdf48be926aa01f7290cfdebaeb92443 2010090600 msys-rebase.xml
   00e25e5a049ee12dd2d502c1a1275f0823e6e974 2010080500 msys-regex.xml
+  bc916d5aa21ea1a488699e21a0c511225aaebc60 2011082600 msys-rsync.xml
   094f8c82e164908cac0da9c9d7340f055dd9f0c1 2010090600 msys-rxvt.xml
   7bf3e063f14fbe52243606ec37f77bd3c0bac947 2010072600 msys-sed.xml
   2328296bf87dfefe62d06792cef153ce10109bc8 2010090600 msys-system-builder.xml
