@@ -1,0 +1,37 @@
+<?xml version="1.0" encoding="UTF-8" standalone="yes"?>
+<software-distribution project="MinGW" home="http://mingw.org" issue="@YYYYMMDDNN@">
+
+  <!-- File: msys-diffstat.xml -->
+
+  <package-collection subsystem="msys">
+    <download-host uri="http://prdownloads.sourceforge.net/mingw/%F?download" />
+
+    <package name="msys-diffstat">
+      <affiliate group="MinGW Developer Toolkit" />
+      <description lang="en" title="diffstat: patch file histograms" >
+        <paragraph>diffstat reads the output of diff and displays a
+          histogram of the insertions, deletions, and modifications
+          per-file. It is useful for reviewing large, complex patch files.
+        </paragraph>
+      </description>
+
+      <source tarname="diffstat-%-msys-%-src.tar" />
+      <licence tarname="diffstat-%-msys-%-lic.tar" />
+
+      <component class="bin">
+        <release tarname="diffstat-1.54-1-msys-1.0.17-bin.tar.lzma" />
+        <requires eq="msys-core-*-msys-*-bin.tar" />
+      </component>
+
+      <component class="doc">
+        <release tarname="diffstat-1.54-1-msys-1.0.17-doc.tar.lzma" />
+      </component>
+
+      <component class="lic">
+        <release tarname="diffstat-1.54-1-msys-1.0.17-lic.tar.lzma" />
+      </component>
+    </package>
+
+  </package-collection>
+</software-distribution>
+<!-- vim: set nocompatible expandtab fileformat=unix textwidth=80 tabstop=2 shiftwidth=2: -->
