@@ -1,0 +1,36 @@
+<?xml version="1.0" encoding="UTF-8" standalone="yes"?>
+<software-distribution project="MinGW" home="http://mingw.org" issue="@YYYYMMDDNN@">
+
+  <!-- File: msys-help2man.xml -->
+
+  <package-collection subsystem="msys">
+    <download-host uri="http://prdownloads.sourceforge.net/mingw/%F?download" />
+
+    <package name="msys-help2man">
+      <affiliate group="MinGW Developer Toolkit" />
+      <description lang="en" title="help2man: generate man pages" >
+        <paragraph>help2man is a perl script to create man pages from program
+          --help and --version output.
+        </paragraph>
+      </description>
+
+      <source tarname="help2man-%-msys-%-src.tar" />
+      <licence tarname="help2man-%-msys-%-lic.tar" />
+
+      <component class="bin">
+        <release tarname="help2man-1.40.4-1-msys-1.0.17-bin.tar.lzma" />
+        <requires eq="msys-perl-*-msys-*-bin.tar" />
+      </component>
+
+      <component class="doc">
+        <release tarname="help2man-1.40.4-1-msys-1.0.17-doc.tar.lzma" />
+      </component>
+
+      <component class="lic">
+        <release tarname="help2man-1.40.4-1-msys-1.0.17-lic.tar.lzma" />
+      </component>
+    </package>
+
+  </package-collection>
+</software-distribution>
+<!-- vim: set nocompatible expandtab fileformat=unix textwidth=80 tabstop=2 shiftwidth=2: -->
