@@ -30,6 +30,7 @@
   <package-list catalogue="msys-cygutils" />
   <package-list catalogue="msys-dash" />
   <package-list catalogue="msys-diffutils" />
+  <package-list catalogue="msys-diffstat" />
   <package-list catalogue="msys-expat" />
   <package-list catalogue="msys-file" />
   <package-list catalogue="msys-findutils" />
@@ -43,6 +44,7 @@
   <package-list catalogue="msys-groff" />
   <package-list catalogue="msys-guile" />
   <package-list catalogue="msys-gzip" />
+  <package-list catalogue="msys-help2man" />
   <package-list catalogue="msys-inetutils" />
   <package-list catalogue="msys-less" />
   <package-list catalogue="msys-libarchive" />
@@ -64,6 +66,7 @@
   <package-list catalogue="msys-popt" />
   <package-list catalogue="msys-rebase" />
   <package-list catalogue="msys-regex" />
+  <package-list catalogue="msys-rsync" />
   <package-list catalogue="msys-rxvt" />
   <package-list catalogue="msys-sed" />
   <package-list catalogue="msys-tar" />
