@@ -1,0 +1,41 @@
+<?xml version="1.0" encoding="UTF-8" standalone="yes"?>
+<software-distribution project="MinGW" home="http://mingw.org" issue="@YYYYMMDDNN@">
+
+  <!-- File: msys-rsync.xml -->
+
+  <package-collection subsystem="msys">
+    <download-host uri="http://prdownloads.sourceforge.net/mingw/%F?download" />
+
+    <package name="msys-rsync">
+      <affiliate group="MinGW Developer Toolkit" />
+      <description lang="en" title="rsync: file transfer program" >
+        <paragraph>rsync is a file transfer program. rsync uses the 'rsync
+          algorithm' which provides a very fast method for bringing remote files
+          into sync. It does this by sending just the differences in the files
+          across the link, without requiring that both sets of files are present
+          at one of the ends of the link beforehand.
+        </paragraph>
+      </description>
+
+      <source tarname="rsync-%-msys-%-src.tar" />
+      <licence tarname="rsync-%-msys-%-lic.tar" />
+
+      <component class="bin">
+        <release tarname="rsync-3.0.8-1-msys-1.0.17-bin.tar.lzma" />
+        <requires eq="msys-core-*-msys-*-bin.tar" />
+        <requires eq="msys-libiconv-*-msys-*-dll-2.tar" />
+        <requires eq="msys-libpopt-*-msys-*-dll-0.tar" />
+      </component>
+
+      <component class="doc">
+        <release tarname="rsync-3.0.8-1-msys-1.0.17-doc.tar.lzma" />
+      </component>
+
+      <component class="lic">
+        <release tarname="rsync-3.0.8-1-msys-1.0.17-lic.tar.lzma" />
+      </component>
+    </package>
+
+  </package-collection>
+</software-distribution>
+<!-- vim: set nocompatible expandtab fileformat=unix textwidth=80 tabstop=2 shiftwidth=2: -->
